# demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  main.c
src/: CMakeLists.txt
src/platform/: CMakeLists.txt  Platform_Types.h
test/: CMakeLists.txt
tools/: windows-toolchain.cmake
